Refs #97142; fix navigation menu on mobile, fix breaktags

--- a/eea/climateadapt/theme/climateadaptv2/src/less/homepage-dynamic.less
+++ b/eea/climateadapt/theme/climateadaptv2/src/less/homepage-dynamic.less
@@ -33,6 +33,7 @@
   font-size: 16px;
   line-height: inherit;
   padding: 1em 3em;
+  margin: 0;
 }
 
 .main-tab-heading .main-tab-item a:hover {
@@ -48,7 +49,7 @@
   background-color: #dcdada;
   content: '';
   position: absolute;
-  right: -7px;
+  right: -3px;
   top: 50%;
   height: 80%;
   width: 1px;
