--- a/eea/climateadapt/theme/climateadaptv2/src/less/main.less
+++ b/eea/climateadapt/theme/climateadaptv2/src/less/main.less
@@ -12,7 +12,7 @@
 
 @media (max-width: 1200px) {
   /* header navigation */
-  .header .main-nav ul li a {
+  .header .main-nav-item > a {
     font-size: 14px;
   }
 
@@ -63,6 +63,52 @@
 @media (max-width: 800px) {
 
   /* header area */
+  .mobile-header .top-menu {
+    height: auto;
+    background-color: #f5f5f5;
+    border-bottom: 1px solid #d3d3d3;
+    padding-bottom: 20px;
+  }
+
+  .mobile-header .top-menu-right-section {
+    width: 100%;
+    padding: 0 20px;
+    margin: 55px 0 0 10px;
+  }
+
+  .mobile-header .top-menu-items {
+    position: absolute;
+    top: -30px;
+    left: -20px;
+  }
+
+  .mobile-header .search-box input {
+    width: auto;
+  }
+
+  .mobile-header .search-box {
+    right: auto;
+    display: block;
+    text-align: center;
+    padding: 10px 0;
+    border-top: 1px solid #f5f5f5;
+    border-bottom: 1px solid #f5f5f5;
+    margin-top: 20px;
+  }
+
+  .mobile-header .angle-down-icon {
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 6px solid @primary-blue;
+    position: absolute;
+    right: 10px;
+    bottom: 25px;
+  }
+
+  .mobile-header .angle-down-icon:hover {
+    border-top: 6px solid @primary-green;
+  }
+
   .mobile-menu {
     display: block;
     position: absolute;
@@ -72,103 +118,79 @@
 
   .header .main-nav,
   .top-menu-content,
-  .separator {
+  .search-box:after {
     display: none;
   }
+
   .nav-toggle {
     display: inline-block;
     width: 100%;
     position: relative;
   }
+
   .mobile-header {
-    position: absolute;
-    width: 100%;
     height: 110vh;
     background-color: #fff;
-    z-index: 10;
   }
-  .mobile-header .header .main-nav {
+
+  .mobile-header .main-nav {
+    display: block;
     background-color: transparent;
     text-align: left;
     overflow-y: auto;
     height: 83vh;
     margin-top: 15px;
-  }
-  .mobile-header .header .main-nav ul {
     box-shadow: none;
     display: block;
-    padding: 0;
+    padding: 0 10px;
   }
-  .mobile-header .header .main-nav ul li a {
+
+  .mobile-header .main-nav-item {
+    display: block;
+  }
+
+  .mobile-header .main-nav-item:not(:last-child) {
     border-right: none;
-    color: @primary-blue;
-    display: inline-block;
-    padding: 25px 10px;
+    border-bottom: 1px solid #e2e1e1;
   }
-  .mobile-header .header .main-nav ul li ul li a {
+
+  .mobile-header .main-nav-item > a {
+    color: @primary-blue;
+    padding: 25px 0;
+    display: inline-block;
+  }
+
+  .mobile-header .main-nav-item:hover > a {
+    background: none;
+  }
+
+  .mobile-header .sub-sub-menu-item {
+    padding: 8px 0;
+  }
+
+  .mobile-header .sub-menu-link {
     padding: 10px 0;
     font-size: 13px;
     color: #464646;
   }
-  .mobile-header .header .main-nav ul li ul li ul li {
-    padding: 0;
+
+  .mobile-header .sub-sub-menu-link {
+    padding: 0 20px;
   }
-  .mobile-header .header .main-nav ul li ul li ul li a {
-    color: #464646;
-    padding-left: 25px;
-  }
-  .mobile-header .header .main-nav ul li a:hover {
-    background: none;
-    color: #7D9600;
-  }
-  .top-menu-right-section {
-    width: 100%;
-    float: none;
-    padding: 0 10px;
-    margin: 55px 0 0 10px;
-  }
-  .header .main-nav .sub-menu-wrapper {
+
+  .mobile-header .sub-menu-wrapper {
     position: relative;
     box-shadow: none;
     border-bottom: none;
     background-color: transparent;
     padding: 0;
+    column-count: auto !important;
   }
-  .main-sub-menu > li:not(:last-child) {
-    padding-bottom: 5px;
-  }
-  .main-sub-menu .fa-database {
-    margin-right: 10px;
-  }
-  .search-box {
-    right: auto;
-    display: block;
-    text-align: center;
-    padding: 10px 0;
-    border-top: 1px solid #f5f5f5;
-    border-bottom: 1px solid #f5f5f5;
-    margin-top: 20px;
-  }
-  .header .main-nav .sub-menu-knowledge {
-    left: auto;
-  }
-  .header .main-nav > ul > li:hover > .sub-menu-wrapper {
-    display: none;
-  }
-  .sub-menu-wrapper .main-sub-menu > li > a {
-    font-size: 14px;
-  }
-  .header .main-nav > ul > li:not(:last-child) {
-    border-bottom: 1px solid #f4f4f4;
-  }
-  .mobile-header .top-menu {
-    height: auto;
-  }
-  .top-menu-items {
-    position: absolute;
-    top: -30px;
-    left: -20px;
-  }
+
+  // .main-sub-menu .fa-database {
+  //   margin-right: 10px;
+  // }
+
 
   /* dynamic area */
   .main-tab-heading .db-highlighted a {
