--- a/eea/climateadapt/theme/climateadaptv2/src/less/mainmenu.less
+++ b/eea/climateadapt/theme/climateadaptv2/src/less/mainmenu.less
@@ -29,7 +29,7 @@
   text-transform: uppercase;
 }
 
-.header .main-nav-item > a:hover {
+.header .main-nav-item:hover > a {
   background: @primary-green;
 }
 
